err/kamaki.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/astakosclient'...
Compiling './lib/python3.5/site-packages/astakosclient/tests.py'...
***   File "./lib/python3.5/site-packages/astakosclient/tests.py", line 449
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/astakosclient-0.19.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/kamaki'...
Listing './lib/python3.5/site-packages/kamaki/cli'...
Compiling './lib/python3.5/site-packages/kamaki/cli/__init__.py'...
***   File "./lib/python3.5/site-packages/kamaki/cli/__init__.py", line 203
    print 'The following information will NOT be preserved:'
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kamaki/cli/argument'...
Listing './lib/python3.5/site-packages/kamaki/cli/cmds'...
Compiling './lib/python3.5/site-packages/kamaki/cli/cmds/image.py'...
***   File "./lib/python3.5/site-packages/kamaki/cli/cmds/image.py", line 261
    print meta['location']
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kamaki/cli/cmdtree'...
Listing './lib/python3.5/site-packages/kamaki/cli/config'...
Compiling './lib/python3.5/site-packages/kamaki/cli/config/__init__.py'...
***   File "./lib/python3.5/site-packages/kamaki/cli/config/__init__.py", line 233
    except UnicodeError, ue:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kamaki/cli/contrib'...
Compiling './lib/python3.5/site-packages/kamaki/cli/logger.py'...
***   File "./lib/python3.5/site-packages/kamaki/cli/logger.py", line 72
    chmod(logfile, 0600)
                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/kamaki/cli/one_cmd.py'...
***   File "./lib/python3.5/site-packages/kamaki/cli/one_cmd.py", line 94
    print 'Details:\n', cmd.long_help
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kamaki/cli/utils'...
Listing './lib/python3.5/site-packages/kamaki/clients'...
Listing './lib/python3.5/site-packages/kamaki/clients/astakos'...
Listing './lib/python3.5/site-packages/kamaki/clients/blockstorage'...
Listing './lib/python3.5/site-packages/kamaki/clients/compute'...
Listing './lib/python3.5/site-packages/kamaki/clients/cyclades'...
Listing './lib/python3.5/site-packages/kamaki/clients/image'...
Listing './lib/python3.5/site-packages/kamaki/clients/network'...
Listing './lib/python3.5/site-packages/kamaki/clients/pithos'...
Listing './lib/python3.5/site-packages/kamaki/clients/storage'...
Listing './lib/python3.5/site-packages/kamaki/clients/utils'...
Listing './lib/python3.5/site-packages/kamaki-0.16.egg-info'...
Listing './lib/python3.5/site-packages/objpool'...
Listing './lib/python3.5/site-packages/objpool-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/progress'...
Listing './lib/python3.5/site-packages/progress-1.3.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
